# hms

./: .gitignore  README.md  delete_patients.py  delete_visits.py  general_coding_standards.md  pyproject.toml  requirements.txt  reseed.py  reseed_db.py  reset_db.py  run.py  test_hogc.py  test_hogc2.py  test_vis.py  test_visibility.py  validate_and_repair.py
.agents/skills/code-writing-standard/: SKILL.md
app/: __init__.py  config.py  extensions.py
app/api/: layout_routes.py
app/auth/: __init__.py  forms.py  models.py  routes.py  utils.py
app/main/: routes.py
app/modules/: __init__.py  blueprint.py  inventory.py  laboratory.py  patients.py  prescriptions.py  routes_base.py  seed.py  users.py  users_admin.py  visits.py
app/modules/inventory/: __init__.py  routes.py
app/modules/laboratory/: __init__.py  routes.py
app/modules/patients/: __init__.py  routes.py
app/modules/prescriptions/: __init__.py  routes.py
app/modules/users/: __init__.py  routes.py
app/modules/visits/: __init__.py  routes.py
app/repositories/: record_repository.py
app/seed/: __init__.py  data.py  schema.py
app/services/: authorization_service.py  inventory_service.py  laboratory_service.py  layout_service.py  notifications.py  patient_service.py  prescription_service.py  user_service.py  visibility_service.py  visit_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html
hospital_management_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sample_flask_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+25 files in other folders)
